--- a/package.json
+++ b/package.json
@@ -8,16 +8,12 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
-    "apiai": "^4.0.0",
     "body-parser": "^1.17.0",
+    "cors": "^2.8.1",
     "express": "^4.15.0",
-    "express-jsend": "^0.1.0",
-    "knex": "^0.12.7",
     "lowdb": "^0.15.5",
     "node-fetch": "^1.6.3",
     "nodemon": "^1.11.0",
-    "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1",
     "uuid": "^3.0.1"
   }
 }
